--- a/02_矩阵消元.md
+++ b/02_矩阵消元.md
@@ -152,3 +152,49 @@ $$
 \end{bmatrix*}
 达到了置换行的效果
 $$
+
+## 逆矩阵 Inverses: 找到某个矩阵可以取消某次消元
+
+$$有原矩阵E=\begin{bmatrix}
+
+    1 & 0 & 0\\
+    3 & 1 & 0\\
+    0 & 0 & 1\\
+
+\end{bmatrix}$$
+
+$$
+\begin{bmatrix}
+
+    1 & 0 & 0\\
+    3 & 1 & 0\\
+    0 & 0 & 1\\
+
+\end{bmatrix}
+\begin{bmatrix}
+
+    1 & 0 & 0\\
+    -3 & 1 & 0\\
+    0 & 0 & 1\\
+
+\end{bmatrix}
+=
+\begin{bmatrix}
+
+    1 & 0 & 0\\
+    0 & 1 & 0\\
+    0 & 0 & 1\\
+
+\end{bmatrix}
+$$
+
+$$i.e: E^{-1}E = I$$
+$$
+E^{-1} = \begin{bmatrix}
+
+    1 & 0 & 0\\
+    3 & 1 & 0\\
+    0 & 0 & 1\\
+
+\end{bmatrix}
+$$
